test/files/neg/outer-ref-checks.check
outer-ref-checks.scala:7: warning: The outer reference in this type test cannot be checked at run time.
  final case class Inner(val s: String) // unchecked warning
                   ^
outer-ref-checks.scala:10: warning: The outer reference in this type test cannot be checked at run time.
    case Inner(s) => // unchecked warning
              ^
outer-ref-checks.scala:20: warning: The outer reference in this type test cannot be checked at run time.
    case Inner(s) => // unchecked warning
              ^
outer-ref-checks.scala:21: warning: The outer reference in this type test cannot be checked at run time.
    case O.Inner(s) => // unchecked warning
                ^
outer-ref-checks.scala:43: warning: The outer reference in this type test cannot be checked at run time.
    case Inner(s) => // unchecked warning
              ^
outer-ref-checks.scala:48: warning: The outer reference in this type test cannot be checked at run time.
    case _: Inner => // unchecked warning
          ^
outer-ref-checks.scala:58: warning: The outer reference in this type test cannot be checked at run time.
    case _: (Inner @uncheckedVariance) => // unchecked warning
          ^
error: No warnings can be incurred under -Xfatal-warnings.
7 warnings found
one error found
